[package]
name = "oriole-text-build"
version = "0.1.0"
authors = ["johannesvollmer <johannes.boenki@t-online.de>"]
edition = "2018"

[dependencies]
oriole-text = { git = "https://github.com/johannesvollmer/oriole-text" }

# when used, these are dev-dependencies
rusttype = "0.7.5"
signed-distance-field = "0.6.3"
resize = "0.3.0"
rect_packer = "0.2.1"

[dev-dependencies]
png = "0.14.0"

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3
